--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -102,7 +102,7 @@ p {
 }
 
 .h1-style-1 {
-    font-size: 4.6rem;
+    font-size: 4.2rem;
     color: white;
     font-weight: 700;
     line-height: 1;
@@ -127,10 +127,10 @@ p {
 
 .desc,
 p {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     font-weight: 400;
 
-    line-height: 1.4;
+    line-height: 1.6;
     color: var(--Text-text-secondary, #344051);
 
 }
@@ -149,6 +149,10 @@ p {
 
 .z-index-2 {
     z-index: 2;
+}
+
+.button-1 {
+    cursor: pointer;
 }
 
 .button-1:hover {
